# Apate

./: .gitignore  Cargo.toml  LICENSE  README.md  babel.config.js  config-overrides.js  package-lock.json  package.json  tsconfig.json
app/: App.tsx  index.tsx  lib.d.ts  react-app-env.d.ts
app/state/: AL5 - The Artificial Light Series.cube  AL5.cube  bitmap.ts  crop.ts  editor.ts  filter.ts  image.ts  index.ts  main.ts
app/styles/: entry.scss  helper.scss  reset.scss
app/types/: global.ts  index.ts  state.ts
app/utils/: bitmap.ts  color.ts  common.ts  eventProxy.ts  events.ts  filter.ts  index.ts  loader.ts  lut.ts
app/worker/: image.worker.ts  index.ts  share.ts  worker.ts
config/: webpack.config.js
design/: imp.sketch
filter/: index.ts
filter/A/: A1.cube  A10.cube  A2.cube  A3.cube  A4.cube  A5.cube  A6.cube  A7.cube  A8.cube  A9.cube  ACG.cube
filter/B/: B1-BW.cube  B2-BW.cube  B3-BW.cube  B4-BW.cube  B5-BW.cube  B6-BW.cube  BBMA.cube
filter/C/: C1.cube  C2.cube  C3.cube  C4.cube  C5.cube  C6.cube  C7.cube  C8.cube  C9.cube
filter/D/: D1.cube  D2.cube
filter/E/: E1.cube  E2.cube  E3.cube  E4.cube  E5.cube  E6.cube  E7.cube  E8.cube
filter/F/: F1.cube  F2.cube  F3.cube
filter/G/: G1.cube  G2.cube  G3.cube  G4.cube  G5.cube  G6.cube  G7.cube  G8.cube  G9.cube
filter/H/: H1.cube  H2.cube  H3.cube  H4.cube  H5.cube  H6.cube  HB1.cube  HB2.cube
filter/J/: J1.cube  J2.cube  J3.cube  (+3 more)
script/: generate_filter_map.js  index.js
src/: color.rs  histogram.rs  image.rs  index.tsx  lib.rs  lut.rs  resampling.rs  utils.rs
static/: index.html
(+144 files in other folders)
